feat: add batch diff mode and fail closed when a load reports errors
BATCH mode reads a JSON manifest naming the arguments shared by every output and
the outputs themselves, loads the project and the database once, and writes every
migration script from that single loaded comparison; producing ten scripts meant
ten full loads of the same two sides. Each script is byte-identical to a
standalone run with the same arguments, because model-loading options live in the
common section alone. A failing output does not abort the batch: the run goes on
and reports the outcome and the timing of every output.

Every mode now passes the same gate before it produces anything. GRAPH was the
one mode that skipped it and printed an incomplete dependency graph with a
success code and an empty error stream, which a pipeline ordering deployment work
off that graph had no way to notice; its try block covered only the loader's
construction rather than the load, so the catch was dead. An uncaught Throwable
at the CLI boundary is reported with its cause and a non-zero result instead of a
bare stack trace or nothing at all, and the cause is suppressed only for the
exception whose cause says nothing - told apart by type rather than guessed from
whether parse errors had accumulated.

A comparison no longer builds the object-reference index while it loads: the
command-line tool never reads it, it exists for the editor, and the previous
setting is restored on success and on failure alike. Export and project update
skip it too, and a batch reuses the dependency graphs of the loaded comparison
across its outputs rather than rebuilding them for each script.

Coverage: a graph load that must fail, a malformed ignore list and a malformed
dependencies file failing the whole run with the path and the first error
position, the fatal-error path, the rules for printing a cause, the loader
factories and the object-reference policy.